# TrafficStar-Collector

./: Cargo.toml  README.md
crates/trafficstar_app/: Cargo.toml  client.sh  server.sh
crates/trafficstar_app/src/: client.rs  configurations.rs  main.rs  server.rs
crates/trafficstar_connections/: Cargo.toml
crates/trafficstar_connections/src/: lib.rs  trafficstar_connection.rs  trafficstar_data_route.rs  trafficstar_data_traversel_types.rs  trafficstar_enums.rs  trafficstar_wireguard.rs
crates/trafficstar_errors/: Cargo.toml
crates/trafficstar_errors/src/: lib.rs  traffic_star_error.rs  trafficstar_error_traits.rs  trafficstar_error_types.rs
crates/trafficstar_interface/: Cargo.toml
crates/trafficstar_interface/src/: cached_vec.rs  controller.rs  iptable_rule.rs  lib.rs  reservation.rs  test.rs
crates/trafficstar_logger/: Cargo.toml
crates/trafficstar_logger/src/: lib.rs  trafficstar_logger.rs  trafficstar_logger_record.rs  trafficstar_logger_trait.rs  trafficstar_time_string_creator.rs
crates/trafficstar_logger_macro/: Cargo.toml
crates/trafficstar_logger_macro/src/: lib.rs
crates/trafficstar_mullvad/: Cargo.toml
crates/trafficstar_mullvad/src/: lib.rs  trafficstar_async_mullvad_account.rs  trafficstar_async_mullvad_handler.rs  trafficstar_async_mullvad_handler_structs.rs  trafficstar_async_mullvad_slave.rs  trafficstar_mullvad_config.rs  trafficstar_mullvad_device.rs  trafficstar_mullvad_relays.rs  trafficstar_mullvad_requests.rs
crates/trafficstar_mullvad/test_data/network_interfaces/: ethernet.json
crates/trafficstar_nodes/: Cargo.toml
crates/trafficstar_nodes/src/: lib.rs  trafficstar_node_client.rs  trafficstar_node_server.rs  trafficstar_nodes.rs
crates/trafficstar_processes/: Cargo.toml
crates/trafficstar_processes/src/: child.txt  lib.rs  route.txt  trafficstar_async_process.rs  trafficstar_iperf3_client.rs  trafficstar_iperf3_client_async.rs  trafficstar_iperf3_server.rs  trafficstar_iperf3_server_async.rs  trafficstar_iperf3_settings.rs  trafficstar_mullvad_browser.rs  trafficstar_processes.rs  trafficstar_tcpdump.rs  trafficstar_wg_process.rs
crates/trafficstar_tester/: Cargo.toml
crates/trafficstar_tester/src/: lib.rs
crates/trafficstar_tests/: Cargo.toml
crates/trafficstar_tests/src/: lib.rs  trafficstar_test.rs  trafficstar_test_config_file.rs  trafficstar_test_configuration.rs  trafficstar_test_errors.rs  trafficstar_tests_mullvad.rs  trafficstar_tests_pure.rs  trafficstar_tests_tor.rs
crates/trafficstar_tor/: Cargo.toml  nohup.out
crates/trafficstar_tor/src/: lib.rs
crates/trafficstar_tor/src/tor_device/: mod.rs  test.rs
crates/trafficstar_tor/src/tor_process/: mod.rs  test.rs  tor_vpn_config.rs  torhandle.rs
crates/trafficstar_utilities/: Cargo.toml
crates/trafficstar_utilities/src/: lib.rs  shuffler.rs  state_locker.rs  test.rs  trafficstar_async_queue.rs  trafficstar_async_semaphore.rs  trafficstar_dns_resolver.rs  trafficstar_semaphore.rs  trafficstar_stored_join.rs
crates/trafficstar_utilities/src/randomizer/: mod.rs
crates/trafficstar_utilities/src/sink/: mod.rs  receiver.rs  sender.rs  settings.rs  test.rs
crates/trafficstar_utilities/src/tempfiles/: directory_copies.rs  mod.rs  test.rs
crates/trafficstar_utilities/src/trafficstar_files/: epoll_events.rs  file_async_rpm.rs  file_handler.rs  file_listener.rs  file_listener_slave.rs  file_signals.rs  mod.rs
crates/trafficstar_utilities/src/trafficstar_networking/: interface.rs  mod.rs  networking_tests.rs
crates/trafficstar_utilities/src/trafficstar_pipes/: mod.rs  pipe_async_receiver.rs  pipe_async_writer.rs  pipe_error.rs  pipe_receiver.rs  pipe_sender.rs
crates/trafficstar_utilities/src/trafficstar_proxy/: mod.rs  proxy.rs  proxy_commands.rs  proxy_slave.rs
