[package]
name = "trafficstar_connections"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Handles connection actions like send handshake packets!"
readme.workspace = true

[dependencies]
strum_macros = "^0.27"
strum = "^0.27"
tokio = "^1.47.1"
futures = "^0.3.31"
err = "^0.0.8"
log = "^0.4.28"
config = "^0.15.15"
wireguard-keys = {version = "^0.1.1", features=["serde"]}
wireguard-uapi = {version = "^3.0.1"}
rtnetlink = {version = "^0.20.0"}
thiserror = "^2.0.17"

rmp-serde = "^1.3.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"


trafficstar_utilities = { path = "../trafficstar_utilities" }
trafficstar_errors = { path = "../trafficstar_errors" }

trafficstar_logger = { path = "../trafficstar_logger" }
trafficstar_logger_macro = { path = "../trafficstar_logger_macro" }

[lib]
path = "src/lib.rs"

