[package]
name = "trafficstar_interface"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Trafficstar Interface controller!"
readme.workspace = true

[lints]
workspace = true

[dependencies]
strum_macros = "0.27"
strum = "0.27"
futures = "0.3.31"
err = "0.0.8"
log = "0.4.28"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8.21"
config = "0.15.15"
trafficstar_logger = { path = "../trafficstar_logger" }
trafficstar_utilities = { path = "../trafficstar_utilities" }
trafficstar_logger_macro = { path = "../trafficstar_logger_macro" }
trafficstar_errors = { path = "../trafficstar_errors" }

thiserror = "^2.0.17"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
tokio = { version = "1.47.1", features = ["full"] } 
reqwest = { version = "0.11", features = ["blocking","json"] }
tempfile = "3.23.0"
bytes = "1.10.1"
globset = "0.4.18"
rand = "^0.8"
platform-dirs = "^0.3.0"
rmp-serde = "^1.3.1"
iptables = "^0.6.0"

wireguard-keys = {version = "^0.1.1", features=["serde"]}
nix = {version = "^0.31.1", features=["event", "fs"]}
wgctrl = "0.1.0"
ipnet = "*"
rtnetlink = {version = "^0.20.0"}

[lib]
path = "src/lib.rs"
