[package]
name = "trafficstar_logger"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
indicatif = {version = "0.18.0", features = ["rayon"]}
log = "0.4.28"
colored = "3.0.0"
strum_macros = "0.27"
termion = "*"
unicode-width = "*"
textwrap = "*"
ansi-str = "*"
once_cell = "^1.21.4"


tokio = { version = "^1", features = ["full"] }

[lints]
workspace = true
