[package]
name = "trafficstar_logger_macro"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
[lib]
proc-macro = true
