[package]
name = "trafficstar_mullvad"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Handles wireguard interfaces on Linux!"
readme.workspace = true

[dependencies]
once_cell = "^1.21.4"
strum_macros = "0.27"
strum = "0.27"
futures = "0.3.31"
err = "0.0.8"
log = "0.4.28"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8.21"
config = "0.15.15"
trafficstar_connections = { path = "../trafficstar_connections" }
trafficstar_logger = { path = "../trafficstar_logger" }
trafficstar_processes = { path = "../trafficstar_processes" }
trafficstar_utilities = { path = "../trafficstar_utilities" }
trafficstar_logger_macro = { path = "../trafficstar_logger_macro" }
trafficstar_errors = { path = "../trafficstar_errors" }
trafficstar_interface = { path = "../trafficstar_interface" }

thiserror = "^2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.47.1", features = ["full"] } 
reqwest = { version = "0.11", features = ["blocking","json"] }
tempfile = "3.23.0"
bytes = "1.10.1"
regex = "^1.12.3"
rand = "^0.8"
rand_pcg = "^0.10.2"


wireguard-keys = {version = "^0.1.1", features=["serde"]}
nix = {version = "^0.31.1", features=["event", "fs"]}
wgctrl = "0.1.0"
ipnet = "*"
rtnetlink = {version = "^0.20.0"}

[dependencies.uuid]
version = "^1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
]
[lib]
path = "src/lib.rs"

