[package]
name = "trafficstar_tester"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Runs tests and etc!"
readme.workspace = true

[dependencies]

[lib]
path = "src/lib.rs"

