[package]
name = "trafficstar_tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Handles trafficstar tests!"
readme.workspace = true

[dependencies]
strum_macros = "0.27"
strum = "0.27"
futures = "0.3.31"
err = "0.0.8"
log = "0.4.28"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8.21"
config = "0.15.15"
trafficstar_connections = { path = "../trafficstar_connections" }
trafficstar_nodes = { path = "../trafficstar_nodes" }

trafficstar_logger = { path = "../trafficstar_logger" }
trafficstar_processes = { path = "../trafficstar_processes" }
trafficstar_utilities = { path = "../trafficstar_utilities" }
trafficstar_tester = { path = "../trafficstar_tester" }
trafficstar_mullvad = { path = "../trafficstar_mullvad" }
trafficstar_tor = { path = "../trafficstar_tor" }
trafficstar_interface = { path = "../trafficstar_interface" }

trafficstar_errors = { path = "../trafficstar_errors" }
trafficstar_logger_macro = { path = "../trafficstar_logger_macro" }
async-trait = "^0.1.89"
once_cell = "*"

thiserror = "^2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = "0.4"
tokio = { version = "1.47.1", features = ["full"] } 
reqwest = { version = "0.11", features = ["blocking","json"] }
tempfile = "3.23.0"
bytes = "1.10.1"
globset = "0.4.18"
rand = "^0.8"

indicatif = {version = "0.18.0", features = ["rayon"]}
colored = "^3.0.0"

[dependencies.uuid]
version = "^1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
]




[lib]
path = "src/lib.rs"

