[package]
name = "trafficstar_utilities"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Offers utilities which might need to be shared!"
readme.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = "^2.0.17"
strum_macros = "^0.27"
strum = "^0.27"
futures = "0.3.31"
err = "0.0.8"
log = "0.4.28"
rmp-serde = "^1.3.1"
serde = { version = "^1.0", features = ["derive"] }
url = "^2.5.8"
once_cell = "^1.21.4"

colored = "3.0.0"
reqwest = { version = "^0.11", features = ["blocking","json"] }
tokio = {version = "1.49.0", features = ["full"]}
tokio-util = { version = "^0.7", features = ["full"] }
default-net = "0.22.0"
tempdir = "*"
hickory-resolver = { version = "*"}
nix = {version = "^0.31.1", features=["event", "fs"]}
crossbeam-queue = {version="*"}
trafficstar_logger = { path = "../trafficstar_logger" }
trafficstar_errors = { path = "../trafficstar_errors" }
trafficstar_logger_macro = { path = "../trafficstar_logger_macro" }

async-condvar-fair={version="1.0.1", features=["tokio"]}
rand_pcg = "^0.10.2"
rand = "^0.8"

[dependencies.uuid]
version = "^1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
]

[lib]
path = "src/lib.rs"
